--- a/Ecosphere/App/ecosphere_app.Rmd
+++ b/Ecosphere/App/ecosphere_app.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "ecosphere_app"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 date: "2024-03-07"
 ---
 
@@ -22,5 +24,6 @@ library("RColorBrewer")
 ecosphere <- read_csv("ecosphere.csv") %>% clean_names() 
 ```
 ## About our App 
+In our app, users will be able to select a habitat location and species to learn more about that species's life history events. The life history events available for users to learn about per species and habitat include: 
 
-
+Migration/range size, urban tolerance, population size, life expectancy, reproduction rates, log10mass, and diet. 
